# DreamerVLA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS copy.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_2026-05-20.md  READMD.md  README.md  README.zh-CN.md  SETUP.md  download.sh  download_hf.sh  findings.md  install.md  install.sh  onetraj_dreamervla.md  progress.md  pyproject.toml  requirements.txt  sitecustomize.py  task_plan.md
.planning/: .active_plan
configs/: README.md  __init__.py  base.yaml  chameleon_latent_action_wm_libero_goal.yaml  cotrain_libero_10.yaml  debug.yaml  debug_pretrained_transition.yaml  dreamer_v3_vla_libero_10.yaml  dreamer_vla_libero_10.yaml  dreamer_vla_libero_10_dreamerv3_pixel_actor.yaml  dreamer_vla_libero_10_dreamerv3_pixel_vlaactor.yaml  dreamer_vla_libero_10_dreamerv3_token_actor.yaml  dreamer_vla_libero_10_rynn_hidden_recon_actor.yaml  dreamer_vla_libero_10_transdreamer.yaml  dreamer_vla_libero_10_transdreamer_vlaactor.yaml  dreamer_vla_libero_goal.yaml  dreamer_vla_libero_goal_dreamerv3_pixel_actor.yaml  dreamer_vla_libero_goal_dreamerv3_pixel_vlaactor.yaml  dreamer_vla_libero_goal_dreamerv3_token_actor.yaml  dreamer_vla_libero_goal_dreamerv3_token_actor_epoch6.yaml  dreamer_vla_libero_goal_pi0_action_hidden_head_actor.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4b.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4c_deep.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4c_wide.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_pi0xform.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_pi0xform_deep.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_resnet.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_resnet6.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_resnet_wide.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_tssm.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4d_tssm_token.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4e_per_token_mlp.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4f_time_broadcast.yaml  dreamer_vla_libero_goal_pi0_legacy_action_hidden_head_actor_v4i_overdim.yaml  dreamer_vla_libero_goal_pi0_legacy_v1_resume.yaml  dreamer_vla_libero_goal_pi0_reshape_unfrozen.yaml  dreamer_vla_libero_goal_rynn_pixel_precomputed_actor.yaml  dreamer_vla_libero_goal_rynn_pixel_precomputed_vlaactor.yaml  dreamerv3_pixel_libero_10.yaml  (+55 more)
data/: libero_goal_metainfo.json
docker/: Dockerfile
docs/: 1.md  HISTORY.md  PARAMETERS.md  README.md  TODO.md  architecture.md  classifier_revision_plan.md  data_layout.md  debug_log.md  docker_reproduction.md  dreamer_vla_writeup.md  dreamervla_writeup.md  feishu.md  feishu_v2.md  findings.md  graveyard_candidates_2026-05-27.md  history.md  install.md  manual_cotrain_rollout_budget.md  multicollector_batched_encoder_plan.md  native_environment_reproduction.md  online_cotrain_agents_claude_audit.md  online_cotrain_bracket_resolution_checklist.md  online_cotrain_pipeline_explained.md  paper_draft.md  performance_optimization_audit.md  performance_optimization_concepts.md  ray_online_cotrain_backend.md  ray_rlinf_alignment_implemented.md  ray_rlinf_alignment_report.md  ray_rlinf_alignment_todo.md  repository_structure.md  rlinf_wovr_inference_optimizations.md  strategy3_rynn_backbone_dreamerv3.md  task_plan.md  wm_training_routes.md
dreamer_vla/: config.py  train.py
dreamervla/: __init__.py  config.py  config_resolvers.py  constants.py  train.py
graveyard/: README.md
knowledge/: summary_wmpo_reward_balance.md
(+2079 files in other folders)
