[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamer-vla"
version = "0.1.0"
description = "Dreamer-style world-model and VLA training framework for LIBERO."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core",
    "omegaconf",
]

[project.optional-dependencies]
ray = [
    "ray[default]>=2.47.0",
]

[project.scripts]
dreamer-vla-train = "dreamervla.train:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["dreamervla*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
