[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamer-vla"
version = "0.1.0"
description = "Dreamer-style world-model and VLA training framework for LIBERO."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core",
    "omegaconf",
]

[project.optional-dependencies]
ray = [
    "ray==2.55.1",
]

[project.scripts]
dreamer-vla-train = "dreamervla.train:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["configs*", "dreamervla*"]

[tool.setuptools.package-data]
configs = ["**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Third-party source is read-only and linted upstream.
extend-exclude = ["third_party"]
# Apply the exclude even when the file is passed explicitly (e.g. pre-commit hooks).
force-exclude = true

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "PIE808",
    "PIE810",
    "RUF021",
    "RUF022",
    "SIM300",
    "SIM910",
    "UP",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# The first part of this module is vendored verbatim from RLinf (Apache-2.0).
# Keep correctness and import checks active while exempting upstream annotation
# modernization and abstract-method style.
"dreamervla/envs/libero/venv.py" = [
    "B027",
    "B905",
    "UP004",
    "UP006",
    "UP007",
    "UP035",
    "UP037",
    "UP045",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
